[package]
name = "bubblers"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Oliveira <jucas.oliveira@gmail.com>"] # List of crate authors.
description = "Crustacean CLI that expels bubbles"
license = "Apache-2.0"
repository = "https://github.com/warpy-ai/bubblers"
keywords = ["cli", "terminal"]                          # arbitrary keywords
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
rustubble = "0.1.3"
